<resources>
    <string name="app_name">MHA</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="phtime_string">00:00am phTime</string>
    <string name="placeholder_string">PLACEHOLDER</string>
    <string name="appointments_header_string">Appointments</string>
    <string name="dashboard_header_string">Dashboard</string>
    <string name="cancel">Cancel</string>
    <string name="labwork_req">"Requires Labwork before "</string>
    <string name="remove">remove</string>
    <string name="home">home</string>
    <string name="add_appointment">Add Appointment</string>

    <!--TODO: This is staging URL-->
    <string name="walgreen_api_url">https://services-qa.walgreens.com/api/util/mweb5url</string>
    <!--string name="walgreen_api_url">https://services.walgreens.com/api/util/mweb5url</string-->
<<<<<<< HEAD
    <string name="walgreens_api_key">@string/walkeygit s</string>
=======
    <string name="walgreens_api_key">@string/walkey</string>
>>>>>>> 05b0ed3670e4cee8a9b52773303a95bc805513b3
    <string name="walgreens_affid">@string/walaff</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appointment_queue_click_to_view">Appointment Quick View</string>
    <string name="enter_notes_or_description_of_appointment">Enter Notes or Description of appointment...</string>
    <string name="description_notes">Description/Notes</string>
    <string name="remind_me_days_before">Remind me days before?</string>
    <string name="appointment_settings">Appointment Settings</string>
    <string name="appointment_title">Appointment Title</string>
    <string name="enter_name_of_doctor_or_a_title">Enter Name of Doctor or a Title...</string>
    <string name="title_activity_pillbox">PillboxActivity</string>
    <string name="mha">My Healthcare Assistant</string>
    <string name="times_differ_per_day">Times differ per day</string>
    <string name="view_note">VIEW NOTE</string>
    <string name="take">Take: %1$s</string>
    <string name="refill_by">"Refill by: %1$s"</string>
    <string name="labwork">Labwork By</string>
    <string name="select_then_tap_trash">Select, then tap trash to delete selected</string>
    <string name="medication_queue">Medication Quick View</string>
    <string name="set_time">Set Time</string>
    <string name="requires_lab_work">Requires Lab Work?</string>
    <string name="number_of_days_results_take">Number of days results take</string>
    <string name="date">Date</string>
    <string name="set_date">Set Date</string>
    <string name="time">Time</string>
    <string name="enter_instructions_and_other_notes">Enter instructions and other notes</string>
    <string name="enter_name_of_medication">Enter Name of Medication</string>
    <string name="same_times_each_day">Same Times Each Day</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sw_error">SOFTWARE ERROR</string>
    <string name="refill_by_sett">Refill by</string>
    <string name="refill_on">Refill On</string>
    <string name="select_date">Select Date</string>
    <string name="set_end_date">Set End Date</string>
    <string name="n_a">N/A</string>
    <string name="enter_zip_code">Enter Zip Code...</string>
    <string name="zip_code">Zip Code</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="current_location">Current Location</string>
    <string name="loc_not_enabled">Location Services not Enabled. Please use zip code or enable location services on your device.</string>
    <string name="enable_loc">Enable Services</string>
    <string name="cancel_loc">Cancel</string>
    <string name="timeout_loc_message">Timeout getting location: Please use zip code, or check device location settings and try again</string>
    <string name="timeout">Timeout</string>
    <string name="cant_geocode_msg">Unable to geocode zipcode</string>
    <string name="cant_get_location">Error: Could Not Get Location!</string>
</resources>
