<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RefillRxActivity">

    <TextView
        android:text="Rx Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="Enter Rx Number..."
        android:inputType="number"
        android:digits="0123456789-"
        android:id="@+id/edittext_rx_num"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Space
        android:layout_width="1dp"
        android:layout_height="20dp" />
    <TextView
        android:layout_marginBottom="5dp"
        android:text="@string/pickup_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/radiogroup_location"
        android:paddingBottom="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        android:background="@drawable/round_num_box_background"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_location_gps"
            android:checked="true"
            android:text="@string/current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/radio_location_zip"
            android:text="@string/zip_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!--TextView
            android:text="Zip Code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" /-->

        <EditText
            android:inputType="number"
            android:hint="@string/enter_zip_code"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_zip_code"/>

    </RadioGroup>

    <Space
        android:layout_width="1dp"
        android:layout_height="20dp" />
    <Button
        android:backgroundTint="@color/colorPrimary"
        android:id="@+id/button_submit_wgapi"
        android:text="Submit"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
