<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:focusableInTouchMode="true">
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="Medication Settings"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_weight="0.9"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <ImageButton
            android:background="@color/colorPrimary"
            android:layout_weight="0.1"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <EditText
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:id="@+id/edittext_pill_title"
        android:layout_marginBottom="5dp"
        android:hint="@string/enter_name_of_medication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/edittext_instr"
        android:hint="@string/enter_instructions_and_other_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="75dp"
        android:minEms="1000"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_gravity="center_horizontal" />
    
    <LinearLayout
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/checkbox_same_times_each_day"
            android:text="@string/same_times_each_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:singleLine="true"
            android:layout_marginEnd="10dp"
            android:textAlignment="textEnd"
            android:id="@+id/textview_alltimes"
            android:text="@string/n_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ListView
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:id="@+id/listview_pill_timeday_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>


    <RadioGroup
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:id="@+id/radiogroup_end"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_duration"
            android:text="Take For Duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/radio_tildate"
            android:text="Take Until Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/radio_none"
            android:text="None"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <LinearLayout
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="10sp"
            android:paddingStart="10dp"
            android:layout_weight="0.3"
            android:inputType="number"
            android:id="@+id/edittext_pill_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="10sp"
            android:id="@+id/edittext_pill_end_date"
            android:paddingEnd="10dp"
            android:layout_weight="0.3"
            android:inputType="none"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Space
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_weight="0.5"
            android:text="@string/refill_on"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textAlignment="textEnd"
            android:layout_weight="0.5"
            android:id="@+id/textview_refill_date"
            android:text="@string/placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/button_set_refill_date"
            android:text="@string/select_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>